--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@11ty/eleventy": "^0.8.3",
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
+    "@types/workbox-window": "^4.3.2",
     "autoprefixer": "^9.5.1",
     "babel-loader": "^8.0.6",
     "cssnano": "^4.1.10",
@@ -48,8 +49,12 @@
     "webpack-cli": "^3.3.2"
   },
   "dependencies": {
-    "eleventy-plugin-pwa": "^1.0.8",
     "acorn": "^6.1.1",
-    "node-sass": "^4.12.0"
+    "awesome-typescript-loader": "^5.2.1",
+    "eleventy-plugin-pwa": "^1.0.8",
+    "node-sass": "^4.12.0",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.5.3",
+    "workbox-window": "^4.3.1"
   }
 }
