--- a/package.json
+++ b/package.json
@@ -35,26 +35,27 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^0.9.0",
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
     "@types/workbox-window": "^4.3.2",
-    "autoprefixer": "^9.5.1",
+    "autoprefixer": "^9.7.0",
     "babel-loader": "^8.0.6",
     "cssnano": "^4.1.10",
     "cssnano-preset-advanced": "^4.0.7",
-    "light-server": "^2.6.3",
+    "html-minifier": "^4.0.0",
+    "light-server": "^2.6.4",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.2",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9"
   },
   "dependencies": {
-    "acorn": "^6.1.1",
+    "acorn": "^7.1.0",
     "awesome-typescript-loader": "^5.2.1",
     "eleventy-plugin-pwa": "^1.0.8",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "source-map-loader": "^0.2.4",
-    "typescript": "^3.5.3",
+    "typescript": "^3.6.4",
     "workbox-window": "^4.3.1"
   }
 }
