--- a/package.json
+++ b/package.json
@@ -34,28 +34,29 @@
     "data": "./src/data"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.9.0",
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
+    "@11ty/eleventy": "^0.10.0",
+    "@11ty/eleventy-navigation": "^0.1.4",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
     "@types/workbox-window": "^4.3.3",
-    "autoprefixer": "^9.7.3",
+    "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
     "cssnano": "^4.1.10",
     "cssnano-preset-advanced": "^4.0.7",
     "html-minifier": "^4.0.0",
     "light-server": "^2.6.4",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^6.1.2",
-    "webpack": "^4.41.4",
+    "postcss-cli": "^7.1.0",
+    "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "acorn": "^7.1.0",
     "awesome-typescript-loader": "^5.2.1",
     "eleventy-plugin-pwa": "^1.0.8",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "source-map-loader": "^0.2.4",
-    "typescript": "^3.7.4",
+    "typescript": "^3.7.5",
     "workbox-window": "^4.3.1"
   }
 }
