--- a/package.json
+++ b/package.json
@@ -33,30 +33,31 @@
     "includes": "./src/includes",
     "data": "./src/data"
   },
+  "browserslist": ["defaults"],
   "devDependencies": {
-    "@11ty/eleventy": "^0.10.0",
-    "@11ty/eleventy-navigation": "^0.1.5",
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
-    "@types/workbox-window": "^4.3.3",
-    "autoprefixer": "^9.7.5",
-    "babel-loader": "^8.1.0",
-    "cssnano": "^4.1.10",
-    "cssnano-preset-advanced": "^4.0.7",
+    "@11ty/eleventy": "^1.0.0",
+    "@11ty/eleventy-navigation": "^0.3.2",
+    "@babel/core": "^7.17.7",
+    "@babel/preset-env": "^7.16.11",
+    "@types/workbox-window": "^4.3.4",
+    "autoprefixer": "^10.4.3",
+    "babel-loader": "^8.2.3",
+    "cssnano": "^5.1.4",
     "html-minifier": "^4.0.0",
-    "light-server": "^2.6.4",
+    "light-server": "^2.9.1",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^7.1.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "postcss": "^8.4.11",
+    "postcss-cli": "^9.1.0",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "acorn": "^7.1.1",
-    "awesome-typescript-loader": "^5.2.1",
+    "acorn": "^8.7.0",
     "eleventy-plugin-pwa": "^1.0.8",
-    "node-sass": "^4.13.1",
-    "source-map-loader": "^0.2.4",
-    "typescript": "^3.8.3",
-    "workbox-window": "^5.1.2"
+    "node-sass": "^7.0.1",
+    "source-map-loader": "^3.0.1",
+    "ts-loader": "^9.2.8",
+    "typescript": "^4.6.2",
+    "workbox-window": "^6.5.1"
   }
 }
