--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "cssnano": "^5.1.4",
     "html-minifier": "^4.0.0",
     "light-server": "^2.9.1",
+    "markdown-it": "^12.3.2",
+    "markdown-it-attrs": "^4.1.3",
     "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.11",
