--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "clean": "rm -rf dist",
     "eleventy:default": "npx eleventy",
     "eleventy:watch": "npx eleventy --watch",
-    "styles:prod": "node-sass src/styles/ --output dist/styles/ && postcss ./dist/styles/*.css --replace",
-    "styles:dev": "node-sass src/styles/ --output dist/styles/ --source-map true --source-map-contents true && postcss ./dist/styles/*.css --replace",
     "scripts:prod": "webpack --mode=production",
     "scripts:dev": "webpack --mode=development",
     "serve": "light-server -c .lightserverrc",
-    "dev": "NODE_ENV=dev npm-run-all clean styles:dev scripts:dev eleventy:default --parallel eleventy:watch serve --print-label",
+    "dev": "NODE_ENV=dev npm-run-all clean scripts:dev eleventy:default --parallel eleventy:watch serve --print-label",
     "dev:debug": "DEBUG=* npm run dev",
-    "build": "NODE_ENV=prod run-s clean styles:prod scripts:prod eleventy:default --print-label"
+    "build": "NODE_ENV=prod run-s clean scripts:prod eleventy:default --print-label"
   },
   "repository": {
     "type": "git",
@@ -38,8 +36,10 @@
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0",
     "@11ty/eleventy-navigation": "^0.3.2",
+    "@aloskutov/eleventy-plugin-external-links": "^1.4.0",
     "@babel/core": "^7.17.7",
     "@babel/preset-env": "^7.16.11",
+    "@csstools/postcss-sass": "^5.0.1",
     "@piraces/eleventy-plugin-pwa": "^1.1.2",
     "@types/workbox-window": "^4.3.4",
     "acorn": "^8.7.0",
@@ -50,10 +50,10 @@
     "light-server": "^2.9.1",
     "markdown-it": "^12.3.2",
     "markdown-it-attrs": "^4.1.3",
-    "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.11",
+    "postcss": "^8.4.12",
     "postcss-cli": "^9.1.0",
+    "postcss-scss": "^4.0.3",
     "source-map-loader": "^3.0.1",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.2",
