--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
   "scripts": {
     "clean": "rm -rf dist",
     "eleventy:default": "npx eleventy",
-    "eleventy:watch": "npx eleventy --watch",
-    "scripts:prod": "webpack --mode=production",
-    "scripts:dev": "webpack --mode=development",
+    "eleventy:watch": "npx eleventy --watch --incremental",
     "serve": "light-server -c .lightserverrc",
-    "dev": "NODE_ENV=dev npm-run-all clean scripts:dev eleventy:default --parallel eleventy:watch serve --print-label",
+    "dev": "NODE_ENV=dev npm-run-all clean eleventy:default --parallel eleventy:watch serve --print-label",
     "dev:debug": "DEBUG=* npm run dev",
-    "build": "NODE_ENV=prod run-s clean scripts:prod eleventy:default --print-label"
+    "build": "NODE_ENV=prod run-s clean eleventy:default --print-label"
   },
   "repository": {
     "type": "git",
@@ -37,14 +35,11 @@
     "@11ty/eleventy": "^1.0.0",
     "@11ty/eleventy-navigation": "^0.3.2",
     "@aloskutov/eleventy-plugin-external-links": "^1.4.0",
-    "@babel/core": "^7.17.7",
-    "@babel/preset-env": "^7.16.11",
     "@csstools/postcss-sass": "^5.0.1",
     "@piraces/eleventy-plugin-pwa": "^1.1.2",
-    "@types/workbox-window": "^4.3.4",
-    "acorn": "^8.7.0",
+    "@tsconfig/recommended": "^1.0.1",
     "autoprefixer": "^10.4.3",
-    "babel-loader": "^8.2.3",
+    "browserify": "^17.0.0",
     "cssnano": "^5.1.4",
     "html-minifier": "^4.0.0",
     "light-server": "^2.9.1",
@@ -52,13 +47,11 @@
     "markdown-it-attrs": "^4.1.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.12",
-    "postcss-cli": "^9.1.0",
     "postcss-scss": "^4.0.3",
-    "source-map-loader": "^3.0.1",
-    "ts-loader": "^9.2.8",
+    "stream-to-string": "^1.2.0",
+    "tsify": "^5.0.4",
     "typescript": "^4.6.2",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2",
+    "uglifyify": "^5.0.2",
     "workbox-window": "^6.5.1"
   }
 }
