--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "clean": "rm -rf dist",
     "eleventy:default": "npx eleventy",
+    "eleventy:serve": "npx eleventy --serve --incremental",
     "eleventy:watch": "npx eleventy --watch --incremental",
-    "serve": "light-server -c .lightserverrc",
-    "dev": "NODE_ENV=dev npm-run-all clean eleventy:default --parallel eleventy:watch serve --print-label",
+    "dev": "NODE_ENV=dev run-s clean eleventy:serve --print-label",
     "dev:debug": "DEBUG=* npm run dev",
     "build": "NODE_ENV=prod run-s clean eleventy:default --print-label"
   },
@@ -41,8 +41,8 @@
     "autoprefixer": "^10.4.4",
     "browserify": "^17.0.0",
     "cssnano": "^5.1.7",
+    "eleventy-plugin-metagen": "^1.6.1",
     "html-minifier": "^4.0.0",
-    "light-server": "^2.9.1",
     "markdown-it": "^12.3.2",
     "markdown-it-attrs": "^4.1.3",
     "npm-run-all": "^4.1.5",
