--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eleventy:serve": "npx eleventy --serve --incremental",
     "eleventy:watch": "npx eleventy --watch --incremental",
     "dev": "NODE_ENV=dev run-s clean eleventy:serve --print-label",
+    "dev:noclean": "NODE_ENV=dev run-s eleventy:serve --print-label",
     "dev:debug": "DEBUG=* npm run dev",
     "build": "NODE_ENV=prod run-s clean eleventy:default --print-label"
   },
@@ -32,26 +33,27 @@
     "defaults"
   ],
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.0",
-    "@11ty/eleventy-navigation": "^0.3.2",
+    "@11ty/eleventy": "^1.0.1",
+    "@11ty/eleventy-fetch": "^3.0.0",
+    "@11ty/eleventy-navigation": "^0.3.3",
     "@aloskutov/eleventy-plugin-external-links": "^1.4.0",
     "@csstools/postcss-sass": "^5.0.1",
     "@piraces/eleventy-plugin-pwa": "^1.1.2",
-    "@tsconfig/recommended": "^1.0.1",
-    "autoprefixer": "^10.4.4",
-    "browserify": "^17.0.0",
-    "cssnano": "^5.1.7",
-    "eleventy-plugin-metagen": "^1.6.1",
+    "autoprefixer": "^10.4.7",
+    "cssnano": "^5.1.8",
+    "eleventy-img-helper": "^0.2.0",
+    "eleventy-plugin-metagen": "^1.7.8",
+    "esbuild": "^0.14.39",
     "html-minifier": "^4.0.0",
-    "markdown-it": "^12.3.2",
-    "markdown-it-attrs": "^4.1.3",
+    "markdown-it": "^13.0.1",
+    "markdown-it-attrs": "^4.1.4",
+    "markdown-it-image-figures": "^2.1.0",
+    "markdown-it-linkify-images": "^2.0.0",
+    "netlify-plugin-cache": "^1.0.3",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.12",
-    "postcss-scss": "^4.0.3",
-    "stream-to-string": "^1.2.0",
-    "tsify": "^5.0.4",
-    "typescript": "^4.6.3",
-    "uglifyify": "^5.0.2",
-    "workbox-window": "^6.5.2"
+    "postcss": "^8.4.14",
+    "postcss-scss": "^4.0.4",
+    "typescript": "^4.6.4",
+    "workbox-window": "^6.5.3"
   }
 }
