--- a/package.json
+++ b/package.json
@@ -36,14 +36,15 @@
     "@11ty/eleventy": "^1.0.1",
     "@11ty/eleventy-fetch": "^3.0.0",
     "@11ty/eleventy-navigation": "^0.3.3",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
     "@aloskutov/eleventy-plugin-external-links": "^1.4.0",
     "@csstools/postcss-sass": "^5.0.1",
     "@piraces/eleventy-plugin-pwa": "^1.1.2",
     "autoprefixer": "^10.4.7",
-    "cssnano": "^5.1.8",
+    "cssnano": "^5.1.10",
     "eleventy-img-helper": "^0.2.0",
     "eleventy-plugin-metagen": "^1.7.8",
-    "esbuild": "^0.14.39",
+    "esbuild": "^0.14.42",
     "html-minifier": "^4.0.0",
     "markdown-it": "^13.0.1",
     "markdown-it-attrs": "^4.1.4",
@@ -52,7 +53,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "postcss-scss": "^4.0.4",
-    "typescript": "^4.6.4",
+    "typescript": "^4.7.2",
     "workbox-window": "^6.5.3"
   }
 }
