updates for the first time in much too long

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "eleventy:default": "npx eleventy",
     "eleventy:serve": "npx eleventy --serve --incremental",
     "eleventy:watch": "npx eleventy --watch --incremental",
-    "dev": "NODE_ENV=dev run-s clean:dev eleventy:serve --print-label",
-    "dev:noclean": "NODE_ENV=dev run-s eleventy:serve --print-label",
+    "dev": "NODE_ENV=dev NODE_OPTIONS=--no-experimental-fetch run-s clean:dev eleventy:serve --print-label",
+    "dev:noclean": "NODE_ENV=dev NODE_OPTIONS=--no-experimental-fetch run-s eleventy:serve --print-label",
     "dev:debug": "DEBUG=* npm run dev",
-    "build": "NODE_ENV=prod run-s clean eleventy:default --print-label"
+    "build": "NODE_ENV=prod NODE_OPTIONS=--no-experimental-fetch run-s clean eleventy:default --print-label",
+    "build:noclean": "NODE_ENV=prod NODE_OPTIONS=--no-experimental-fetch run-s eleventy:default --print-label"
   },
   "repository": {
     "type": "git",
@@ -26,27 +27,27 @@
   },
   "homepage": "https://github.com/adueppen/personal-website#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.1",
+    "@11ty/eleventy": "^1.0.2",
     "@11ty/eleventy-fetch": "^3.0.0",
-    "@11ty/eleventy-navigation": "^0.3.3",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
-    "@aloskutov/eleventy-plugin-external-links": "^1.4.1",
+    "@11ty/eleventy-navigation": "^0.3.5",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
+    "@aloskutov/eleventy-plugin-external-links": "^1.4.3",
     "@csstools/postcss-sass": "^5.0.1",
     "@piraces/eleventy-plugin-pwa": "^1.1.2",
-    "autoprefixer": "^10.4.8",
-    "cssnano": "^5.1.12",
-    "eleventy-img-helper": "^0.2.0",
+    "autoprefixer": "^10.4.13",
+    "cssnano": "^5.1.14",
+    "eleventy-img-helper": "^0.2.1",
     "eleventy-plugin-metagen": "^1.7.11",
-    "esbuild": "^0.14.54",
+    "esbuild": "^0.16.4",
     "html-minifier": "^4.0.0",
     "markdown-it": "^13.0.1",
-    "markdown-it-attrs": "^4.1.4",
+    "markdown-it-attrs": "^4.1.6",
     "markdown-it-image-figures": "^2.1.0",
-    "markdown-it-linkify-images": "^2.0.0",
+    "markdown-it-linkify-images": "^3.0.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.16",
-    "postcss-scss": "^4.0.4",
-    "typescript": "^4.7.4",
+    "postcss": "^8.4.20",
+    "postcss-scss": "^4.0.6",
+    "typescript": "^4.9.4",
     "workbox-window": "^6.5.4"
   }
 }
