--- a/package.json
+++ b/package.json
@@ -27,27 +27,29 @@
   },
   "homepage": "https://github.com/adueppen/personal-website#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.0",
-    "@11ty/eleventy-fetch": "^3.0.0",
+    "@11ty/eleventy": "^3.0.0",
+    "@11ty/eleventy-fetch": "^4.0.1",
     "@11ty/eleventy-navigation": "^0.3.5",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
-    "@aloskutov/eleventy-plugin-external-links": "^1.4.4",
-    "@csstools/postcss-sass": "^5.0.1",
-    "@piraces/eleventy-plugin-pwa": "^1.1.2",
-    "autoprefixer": "^10.4.14",
-    "cssnano": "^5.1.15",
-    "eleventy-img-helper": "^0.3.0",
-    "eleventy-plugin-metagen": "^1.7.11",
-    "esbuild": "^0.17.11",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
+    "@aloskutov/eleventy-plugin-external-links": "^2.1.1",
+    "@csstools/postcss-sass": "^5.1.1",
+    "@pkvach/eleventy-plugin-pwa": "^2.0.0",
+    "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.6",
+    "eleventy-img-helper": "^0.4.0",
+    "eleventy-plugin-metagen": "^1.8.3",
+    "esbuild": "^0.24.0",
     "html-minifier": "^4.0.0",
-    "markdown-it": "^13.0.1",
-    "markdown-it-attrs": "^4.1.6",
+    "markdown-it": "^14.1.0",
+		"markdown-it-anchor": "^9.2.0",
+    "markdown-it-attrs": "^4.2.0",
     "markdown-it-image-figures": "^2.1.1",
     "markdown-it-linkify-images": "^4.0.0",
+		"markdown-it-table-of-contents": "^0.8.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.21",
-    "postcss-scss": "^4.0.6",
-    "typescript": "^4.9.5",
-    "workbox-window": "^6.5.4"
+    "postcss": "^8.4.47",
+    "postcss-scss": "^4.0.9",
+    "typescript": "^5.6.3",
+    "workbox-window": "^7.1.0"
   }
 }
