migrate to ESM and compartmentalize config

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "version": "0.0.1",
   "description": "Personal website",
-  "main": "index.js",
-  "scripts": {
+  "main": "eleventy.config.js",
+	"type": "module",
+	"scripts": {
     "clean": "rm -rf dist",
     "clean:dev": "rm -rf dist_dev",
     "eleventy:default": "npx eleventy",
@@ -34,6 +35,7 @@
     "@aloskutov/eleventy-plugin-external-links": "^2.1.1",
     "@csstools/postcss-sass": "^5.1.1",
     "@pkvach/eleventy-plugin-pwa": "^2.0.0",
+    "@sindresorhus/slugify": "^2.2.1",
     "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
     "eleventy-img-helper": "^0.4.0",
@@ -41,11 +43,11 @@
     "esbuild": "^0.24.0",
     "html-minifier": "^4.0.0",
     "markdown-it": "^14.1.0",
-		"markdown-it-anchor": "^9.2.0",
+    "markdown-it-anchor": "^9.2.0",
     "markdown-it-attrs": "^4.2.0",
     "markdown-it-image-figures": "^2.1.1",
     "markdown-it-linkify-images": "^4.0.0",
-		"markdown-it-table-of-contents": "^0.8.0",
+    "markdown-it-table-of-contents": "^0.8.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
     "postcss-scss": "^4.0.9",
